append the time of reservation to show to user and doctor in his appointment

--- a/Angular/src/app/components/client/creat-reservation-continue/creat-reservation-continue.component.html
+++ b/Angular/src/app/components/client/creat-reservation-continue/creat-reservation-continue.component.html
@@ -45,7 +45,7 @@
                         <div class="bookingDetails">
                             <h5>Booking Date</h5>
                             <div>
-                                Today, from {{dayShift.from}} to {{dayShift.to}} 
+                                {{dayName}}, from {{dayShift.from}} to {{dayShift.to}} 
                                 <br>Pre-booking and first-come-first-served entry
                             </div>
                         </div>
