--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-client-header></app-client-header>
-<router-outlet></router-outlet>
+<!-- <<app-client-header></app-client-header>
+<router-outlet></router-outlet> -->
+<app-search></app-search>
