--- a/Angular/src/app/components/show-doctors-page/filter-doctorside-bar/filter-doctorside-bar.component.html
+++ b/Angular/src/app/components/show-doctors-page/filter-doctorside-bar/filter-doctorside-bar.component.html
@@ -10,7 +10,7 @@ Specify your search
             <div class="col-10 d-flex justify-content-between">
                 <i class="fas fa-graduation-cap"></i>
                 <h3>
-                    اللقب
+                    Title
                 </h3>
             </div>
             <i class="fas fa-angle-up fa-2x" id="Angleicon1"></i>
@@ -21,21 +21,24 @@ Specify your search
             <div class="card-body">
                 <div class="card-body d-flex flex-column">
                     <div class="d-flex align-items-center">
-                        <input type="checkbox" id="Today">
-                        <label for="Today" class="ml-2">Today</label>
+                        <input type="checkbox" id="professor">
+                        <label for="professor" class="ml-2">professor
+                           </label>
                     </div>
 
                     <div class="d-flex align-items-center">
-                        <input type="checkbox" id="Tomorrow">
-                        <label for="Tomorrow" class="ml-2">Tomorrow</label>
+                        <input type="checkbox" id="teacher">
+                        <label for="teacher" class="ml-2"> teacher
+                            </label>
                     </div>
                     <div class="d-flex align-items-center">
-                        <input type="checkbox" id="Anyday">
-                        <label for="Anyday" class="ml-2">Any Day</label>
+                        <input type="checkbox" id="consultative">
+                        <label for="consultative" class="ml-2">consultative
+                            </label>
                     </div>
                     <div class="d-flex align-items-center">
-                        <input type="checkbox" id="Anyday">
-                        <label for="Anyday" class="ml-2">Any Day</label>
+                        <input type="checkbox" id="specialist">
+                        <label for="specialist" class="ml-2">specialist</label>
                     </div>
 
                 </div>
@@ -52,7 +55,7 @@ Specify your search
             <div class="col-10 d-flex justify-content-between">
                 <i class="fas fa-stethoscope"></i>
                 <h3>
-                    التخصص الفرعي
+                    Subspecialty 
                 </h3>
             </div>
             <i class="fas fa-angle-up fa-2x" id="Angleicon2"></i>
