modify search method

--- a/Angular/src/app/components/home-page/home-page.component.html
+++ b/Angular/src/app/components/home-page/home-page.component.html
@@ -1,3 +1,7 @@
+
+<!-- <app-search></app-search> -->
+
+
 <div id="carouselExampleControls" class="carousel slide mt-5" data-ride="carousel"
   style="display: flex;justify-content: center;" data-interval="false">
   <div class="carousel-inner col-12" style="justify-content: center;">
