--- a/Angular/src/app/components/client/client-footer/client-footer.component.html
+++ b/Angular/src/app/components/client/client-footer/client-footer.component.html
@@ -1,1 +1,72 @@
-<p>client-footer works!</p>
+<div class="container-fluid mt-2 bg-primary text-white pb-4 ">
+  <div class="row pt-3">
+    <div class="col-6 col-sm-3 ml-0">
+      <div class="ml-4">
+        <img src="../../../../assets/images/whitelogowithdotcom.jpg" class="img-fluid " alt="Logo" style="width: 50%;">
+      </div>
+      <div class="mt-3 ml-4">
+        <a href="#" class=" text-white">about us </a>
+      </div>
+      <div class="mt-2 ml-4">
+        <a href="#" class=" text-white">our team </a>
+      </div>
+      <div class="mt-2 ml-4">
+        <a href="#" class=" text-white">Carers </a>
+      </div>
+      <div class="mt-2 ml-4">
+        <a href="##" class=" text-white">Press </a>
+      </div>
+
+    </div>
+
+    <div class="col-6 col-sm-3">
+      <p class="font-weight-bold ">Are You A Doctor ?</p>
+      <div class="mt-2">
+        <a href="#" class="text-white">Join Vezeeta Doctors </a>
+      </div>
+
+    </div>
+
+    <div class="col-6 col-sm-3">
+      <p class="font-weight-bold">need Help ?</p>
+      <div class="mt-2">
+        <a href="#" class="text-white">Contact Us </a>
+      </div>
+      <div class="mt-2">
+        <a href="#" class="text-white">Terms Of Use </a>
+      </div>
+      <div class="mt-2">
+        <a href="#" class="text-white">Privacy Policy </a>
+      </div>
+      <div class="mt-2">
+        <a href="#" class="text-white">Doctors Privacy Policy </a>
+      </div>
+    </div>
+
+
+    <div class=" col-6 col-sm-3">
+      <a href="#">
+        <img src="../../../../assets/images/google_play.jpg" class="img-fluid " alt="Logo">
+      </a>
+
+      <a href="#" class="">
+        <img src="../../../../assets/images/app-store.jpg" class="img-fluid mt-4" alt="Logo">
+      </a>
+      <div class="row mt-3">
+        <div class="col-3">
+          <a href="#" class="text-white text-decoration-none "><i class="fab fa-facebook-f"></i></a>
+        </div>
+        <div class="col-3">
+            <a href="#" class="text-white text-decoration-none "><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <div class="col-3">
+          <a href="#" class="text-white text-decoration-none "><i class="fab fa-twitter"></i></a>
+        </div>
+
+      </div>
+
+    </div>
+
+
+  </div>
+</div>
