--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,6 +1,4 @@
-<!-- <app-client-header></app-client-header>
+<app-client-header></app-client-header>
 
-<router-outlet></router-outlet>  -->
+<router-outlet></router-outlet> 
 
-<app-user-update></app-user-update>
-<!-- <app-client-footer></app-client-footer> -->
