--- a/Angular/src/app/components/client/client-footer/client-footer.component.html
+++ b/Angular/src/app/components/client/client-footer/client-footer.component.html
@@ -60,7 +60,7 @@
             <a href="#" class="text-white text-decoration-none "><i class="fab fa-linkedin-in"></i></a>
         </div>
         <div class="col-3">
-          <a href="#" class="text-white text-decoration-none "><i class="fab fa-twitter"></i></a>
+          <a href="" class="text-white text-decoration-none "><i class="fab fa-twitter"></i></a>
         </div>
 
       </div>
