--- a/Angular/src/app/components/show-doctors-page/filter-doctor-data/filter-doctor-data.component.html
+++ b/Angular/src/app/components/show-doctors-page/filter-doctor-data/filter-doctor-data.component.html
@@ -1,19 +1,27 @@
-<div class="p-3">
-    {{specialtyName}} {{NumberOfDoctors}} doctors
+
+<div *ngIf="!IsContainDoctor" style="display: flex;justify-content: center">
+    <p class="pt-5" style="font-size: 40px;color: brown;">
+        there is no doctors that match your search
+    </p>
+
+</div>
+<div class="p-3" *ngIf="IsContainDoctor">
+    <!-- {{specialtyName}}  -->
+    {{NumberOfDoctors}} doctors
 </div>
 <div class="row" *ngFor="let doctor of DoctorsList;let x=index">
     <div class="card mb-3 col-11">
-        <div class="row g-0">
+        <div class="row g-0 pb-5">
             <div class="col-md-3 p-3">
                 <div class="text-center">
                     <img [src]="createImgPath(doctor.image)" alt="image 1" class="img-fluid DoctorImage">
 
                 </div>
-                <div class="mt-5 d-flex col-12 justify-content-center">
+                <!-- <div class="mt-5 d-flex col-12 justify-content-center">
                     <button
                         style="background-color: burlywood;border-radius:15px 15px 15px 15px;width: 130px;height: 30px;">اعلان</button>
 
-                </div>
+                </div> -->
             </div>
 
 
