--- a/Angular/src/app/components/client-offer/offer-category/offer-category.component.html
+++ b/Angular/src/app/components/client-offer/offer-category/offer-category.component.html
@@ -32,3 +32,25 @@
         </div>
     </div>
 </div>
+
+
+<nav aria-label="..." class="pt-4">
+    <div class="d-flex justify-content-center " style="align-items: center;">
+
+        <ul class="pagination">
+            <li class="page-item" [ngClass]="{disabled:currentPage <= 1,cursorNotAllowed:currentPage <= 1}">
+                <a class="page-link" (click)="pageChange(currentPage-1)" tabindex="-1" aria-disabled="true">Previous</a>
+            </li>
+
+            <li class="page-item" *ngFor="let x of counter(numberOfPage);let i=index" [class.active]="i+1==currentPage">
+                <a class="page-link" (click)="pageChange(i+1)">{{i+1}}</a>
+            </li>
+
+            <li class="page-item"
+                [ngClass]="{disabled:currentPage >= numberOfPage,cursorNotAllowed:currentPage >= numberOfPage}">
+                <a class="page-link" (click)="pageChange(currentPage+1)">Next</a>
+            </li>
+        </ul>
+        <!-- <div class="float-right h5 mr-4 text-secondary">Showing {{currentPage}} of {{numberOfPage}}</div> -->
+    </div>
+</nav>
