--- a/Angular/src/app/components/home-page/home-page.component.scss
+++ b/Angular/src/app/components/home-page/home-page.component.scss
@@ -69,3 +69,11 @@
     color: rgb(102, 102, 102);;
   }
 }
+
+
+.specializeSectionTitle{
+  
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: rgb(102, 102, 102);
+}
