--- a/Angular/src/app/components/show-doctors-page/filter-doctor-data/filter-doctor-data.component.html
+++ b/Angular/src/app/components/show-doctors-page/filter-doctor-data/filter-doctor-data.component.html
@@ -9,11 +9,11 @@
                     <img [src]="createImgPath(doctor.image)" alt="image 1" class="img-fluid DoctorImage">
 
                 </div>
-                <div class="mt-5 d-flex col-12 justify-content-center">
+                <!-- <div class="mt-5 d-flex col-12 justify-content-center">
                     <button
                         style="background-color: burlywood;border-radius:15px 15px 15px 15px;width: 130px;height: 30px;">اعلان</button>
 
-                </div>
+                </div> -->
             </div>
 
 
@@ -65,7 +65,7 @@
                                         *ngIf="day.IsWork">
                                         <div *ngFor="let shift of day._dayShift"
                                             (click)="reserve(shift.id,doctor.user.userName,day.datee)"
-                                            class="mb-2 border">
+                                            class="mb-2 border clickReserve rounded">
                                             <small>from : {{shift.from}}</small>
                                             <br>
                                             <!-- {{shift.id}}  -->
@@ -90,14 +90,14 @@
 
                     <a class="carousel-control-prev" href="#carouselExampleControls{{x}}" role="button"
                         data-slide="prev">
-                        <!-- style="left: -7% !important;" -->
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+                        <i class="fas fa-chevron-left"></i>
                         <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselExampleControls{{x}}" role="button"
                         data-slide="next">
-                        <!-- style="right: -7% !important;" -->
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+                        <i class="fas fa-chevron-right"></i>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
