Manage Rating for Doctors

--- a/Angular/src/app/components/client/client-header/client-header.component.html
+++ b/Angular/src/app/components/client/client-header/client-header.component.html
@@ -11,7 +11,7 @@
       <div class="navbar-nav ml-auto">
         
         <a class="nav-item nav-link mr-5" routerLink="ClientOffer/offers">Offers</a>
-        
+          
         <a class="nav-item nav-link mr-5" routerLink="dashboard" *ngIf="isLoggedIn()">Dashboard</a>
         <a class="nav-item nav-link signUp border" routerLink="registerUser" *ngIf="!isLoggedIn()">Sign up</a>
         <a class="nav-item nav-link border-right" routerLink="login" *ngIf="!isLoggedIn()">Login</a>
@@ -26,13 +26,13 @@
             {{currentUser.fullName}}
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" routerLink="MyInformation/UserUpdate">My Information</a>
             <a class="dropdown-item" routerLink="UserAppointments" href="#">My Appointments</a>
             <a class="dropdown-item" routerLink="DoctorAppointments" href="#">Doctor Appointments</a>
             <a class="dropdown-item" routerLink="ClientOffer/UserOfferAppointments" href="#">My Offer Appointments</a>
             <a class="dropdown-item" routerLink="ClientOffer/DoctorOfferAppointments" href="#">Doctor Offer Appointments</a>
             
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" routerLink="ResetPassword">Reset Password</a>
             <a class="dropdown-item" (click)="Logout()" *ngIf="isLoggedIn()">Logout</a>
           </div>
         </li>
