--- a/Angular/src/app/components/user-update/user-update.component.html
+++ b/Angular/src/app/components/user-update/user-update.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 offset-md-3 mt-5">
+<div class="col-md-12 border">
   <div class="card">
     <h4 class="card-header">Mange Profile</h4>
     <div class="card-body px-4">
