--- a/Angular/src/app/components/login/login.component.html
+++ b/Angular/src/app/components/login/login.component.html
@@ -38,6 +38,8 @@
         <div class="haveNotAccount">
           don't have an account in Vezeeta ? 
           <a routerLink="/registerDoctor">Register</a>
+          <a routerLink="/forgetPassword" class="d-block border-0">forget password</a>
+
         </div>
       </div>
     </div>
